examples/errors/positional_after_named.vut
fn add(a, b) {
  return a + b
}

add(a = 1, 2)
